# libsibna

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_REPORT.md  PROTOCOL_SUMMARY.md  README.md  SECURITY.md  check.txt  clippy.toml  core_test_errors.txt  deny.toml  rustfmt.toml  test_errors.txt  warnings.txt
.github/workflows/: release.yml
core/: Cargo.toml  build_errors.txt  cbindgen.h  cbindgen.toml
core/src/: error.rs  iot.rs  lib.rs  metadata.rs  rate_limit.rs  safety.rs  validation.rs  wasm.rs
core/src/crypto/: encryptor.rs  kdf.rs  mod.rs  random.rs  secure_compare.rs
core/src/ffi/: mod.rs
core/src/group/: mod.rs
core/src/handshake/: builder.rs  mod.rs  x3dh.rs
core/src/keystore/: mod.rs
core/src/ratchet/: chain.rs  mod.rs  session.rs  state.rs
sdks/cpp/: CMakeLists.txt
sdks/cpp/include/sibna/: context.hpp  crypto.hpp  error.hpp  identity.hpp  safety_number.hpp  session.hpp  sibna.hpp  types.hpp  utils.hpp
sdks/cpp/src/: crypto.cpp  error.cpp  utils.cpp
sdks/dart/: pubspec.yaml
sdks/dart/lib/: sibna_protocol.dart
sdks/dart/lib/src/: bindings.dart  context.dart  group.dart  identity.dart  safety_number.dart  session.dart
sdks/flutter/: README.md  pubspec.yaml
sdks/flutter/android/src/main/kotlin/dev/sibna/flutter/: SibnaFlutterPlugin.kt
sdks/flutter/example/lib/: main.dart
sdks/flutter/ios/Classes/: SibnaFlutterPlugin.swift
sdks/flutter/lib/: sibna_flutter.dart
sdks/flutter/lib/src/: context.dart  crypto.dart  errors.dart  ffi_bindings.dart  group.dart  identity.dart  safety_number.dart  session.dart  sibna_flutter_base.dart
sdks/flutter/linux/: CMakeLists.txt
sdks/flutter/macos/: sibna_flutter.podspec
sdks/flutter/macos/Classes/: SibnaFlutterPlugin.swift
sdks/flutter/windows/: CMakeLists.txt
sdks/go/: client.go
sdks/javascript/: package.json  tsconfig.json
sdks/javascript/src/: index.ts
sdks/python/: setup.py
sdks/python/sibna/: __init__.py  client.py
server/: Cargo.toml
server/src/: auth.rs  main.rs  ws.rs
sibna-protocol/: CHANGELOG.md  PROTOCOL_SUMMARY.md
sibna-protocol/core/: Cargo.toml
sibna-protocol/core/src/: rate_limit.rs  safety.rs  validation.rs
sibna-protocol/core/src/crypto/: secure_compare.rs
sibna-protocol/core/src/group/: mod.rs
sibna-protocol/core/src/handshake/: builder.rs  mod.rs  x3dh.rs
sibna-protocol/core/src/keystore/: mod.rs
sibna-protocol/sdks/cpp/: CMakeLists.txt
sibna-protocol/sdks/cpp/include/sibna/: group.hpp
sibna-protocol/sdks/dart/: pubspec.yaml
sibna-protocol/sdks/dart/lib/: sibna_protocol.dart
sibna-protocol/sdks/dart/lib/src/: context.dart  crypto.dart  errors.dart  utils.dart
sibna-protocol/tests/: Cargo.toml  integration_tests.rs
tests/: Cargo.toml  attack_tests.rs  integration_tests.rs  multi_device_tests.rs
tests/sibna_server_db/: db
tests/test_db_4039804977/: db
tests/test_db_v11_1420694345/: db
tests/test_db_v11_78853943/: db
