# Sibna Protocol v8 - Ultra Secure Edition
# Professionally audited and hardened implementation
# Version 8.0.0 - Security Hardened

[workspace]
members = ["core"]
resolver = "2"

[workspace.dependencies]
# Cryptographic dependencies - all audited versions
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde", "zeroize"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
aes-gcm = { version = "0.10.3", features = ["aes"] }
hkdf = "0.12.4"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
blake3 = "1.5.1"
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
rand = { version = "0.8.5", features = ["std_rng"] }
getrandom = "0.2.14"

# Serialization
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Error handling
thiserror = "1.0.61"
anyhow = "1.0.86"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Security
zeroize = { version = "1.8.1", features = ["zeroize_derive", "alloc", "serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
constant_time_eq = "0.3.0"

# Utilities
bytes = { version = "1.6.0", features = ["serde"] }
parking_lot = "0.12.3"
dashmap = "6.0.1"
once_cell = "1.19.0"
libc = "0.2.155"

# Database
sled = "0.34.7"
redb = "2.1.1"

# Async (optional)
tokio = { version = "1.38.0", features = ["rt", "sync"] }

# WASM
wasm-bindgen = { version = "0.2.92" }
js-sys = { version = "0.3.69" }
web-sys = { version = "0.3.69" }

# Build dependencies
cbindgen = { version = "0.26.0" }

[workspace.package]
version = "8.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
authors = ["Sibna Security Team <security@sibna.dev>"]
description = "Ultra-Secure Communication Protocol - Hardened Edition"
repository = "https://github.com/sibna/protocol"
keywords = ["cryptography", "encryption", "signal", "secure-messaging", "e2ee"]
categories = ["cryptography", "network-programming"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 2
debug = true
overflow-checks = true
