[package]
name = "sibna-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []
ffi = ["libc"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
argon2 = ["dep:argon2"]

[dependencies]
# Cryptographic dependencies
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Security
zeroize = { workspace = true }
secrecy = { workspace = true }
constant_time_eq = { workspace = true }

# Utilities
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
libc = { workspace = true, optional = true }

# WASM
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

# Optional dependencies
argon2 = { version = "0.5.3", optional = true }
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "=1.5.0"


