[package]
name = "sibna-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Universal Sibna Protocol Server v11.0 — Zero-Trust, Multi-Transport"
repository.workspace = true

[dependencies]
sibna-core = { path = "../core", features = ["std"] }
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "limit", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
hex = "0.4.3"
sled = "0.34"
uuid = { version = "1.8", features = ["v4"] }
jsonwebtoken = "9.3"
sha2 = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dashmap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
lz4_flex = "0.11"
ed25519-dalek = { workspace = true }
