[package]
name    = "sibna-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "attack_tests"
path = "attack_tests.rs"

[[test]]
name = "multi_device_tests"
path = "multi_device_tests.rs"

[dev-dependencies]
sibna-core = { path = "../core" }
rand_core  = { version = "0.6.4", features = ["getrandom"] }
x25519-dalek = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.37", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
ed25519-dalek = { workspace = true }
