[package]
name = "sibna-tests"
version = "8.0.0"
edition = "2021"

[dependencies]
sibna-core = { path = "../core" }
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.5.0"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "ratchet_benchmarks"
harness = false
